# avocado-config-gen

./: .flake8  .isort.cfg  .pre-commit-config.yaml  .pre-commit-hooks.yaml  pyproject.toml
avocado_config_gen/: __init__.py  merge.py  tags.py  template.py  toposort.py  traverse.py
tests/: test_avocado_config_gen.py  test_config_gen.py  test_custom_tag_merging.py  test_merge.py  test_tags.py  test_template.py  test_toposort.py
